# neuralnetwork

./: .gitignore  Cargo.toml  README.md  build.rs
1day_agents/: agent_0.json  agent_1.json  agent_2.json  agent_3.json  agent_4.json
best_agents/: test_agent.json
data/digits/: 0_handwritten.raw  0_machine.raw  1_handwritten.raw  1_machine.raw  2_handwritten.raw  2_machine.raw  3_handwritten.raw  3_machine.raw  4_handwritten.raw  4_machine.raw  5_handwritten.raw  5_machine.raw  6_handwritten.raw  6_machine.raw  7_handwritten.raw  7_machine.raw  8_handwritten.raw  8_machine.raw  9_handwritten.raw  9_machine.raw
src/: activationfunction.rs  agentstats.rs  battler.rs  benchmarks.rs  digitclassifier.rs  ksuccession.rs  ksuccessiontrainer.rs  libmatrixhandle.rs  main.rs  matrix.rs  matrixhandle.rs  metalmatrix.metal  metalmatrixhandle.rs  neuralnetwork.rs  simplematrixhandle.rs  verifyingmatrixhandle.rs
src/matrix/: cudamatrixhandle.rs  matrix.rs  matrixhandle.rs  metalmatrix.metal  metalmatrixhandle.rs  mod.rs  simplematrixhandle.rs  verifyingmatrixhandle.rs
src/neuralnetwork/: inplace.rs  mod.rs  simple.rs
