[package]
name = "digits"
version = "0.1.0"
authors = ["Kasper Nielsen <kasper0406@gmail.com>"]

build = "build.rs"

[features]
default = []
cudamatrix = []
metalmatrix = []

[dependencies]
num = "*"
rand = "0.7.0"
futures-preview = "*"
crossbeam = "0.4"
rayon = "1.0"
num_cpus = "1.8.0"
bencher = "*"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0.1"

libc = "0.2.0"

objc = "0.2.6"
objc-foundation = "0.1.1"
cocoa = "0.19.0"
metal = "0.15.0"
# metal = { path = "/Volumes/git/metal-rs" }
lazy_static = "*"
